Fri Nov 14 23:05:47 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/tao_idl_mcpp.mpb:

          This isn't used by clients of TAO_IDL so it can live here.

        * orbsvcs/IFR_Service/IFR_Service.mpc:

          Adapted the "verbatim(gnuace)" section for use on Windows.

        * rules.tao.GNU:

          Translate \ to / in $(TAO_ROOT).

        * MPC/config/tao_idl_mcpp.mpb:

          Removed this file.  Moved it to $TAO_ROOT/TAO_IDL.

Fri Nov 14 14:30:30 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3499_Regression/DLL_TAO_Service.cpp:

          Remove extranious ;

Fri Nov 14 13:23:30 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp:

          Always report fatal errors during init.

Fri Nov 14 12:29:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3499_Regression/run_test.pl:
          Fixed this script

Fri Nov 14 10:30:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/TestImpl.h:

          ReFixed the Reintroduced Fuzz error with
          Thu Nov 13 21:48:14 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

Thu Nov 13 22:22:40 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/DevGuideExamples/NotifyService/Messenger/NotifyServiceMessenger.mpc:

        * orbsvcs/DevGuideExamples/NotifyService/OfferSubscriptions/OfferSubscriptions.mpc:

        * orbsvcs/DevGuideExamples/NotifyService/QoSProperties/QoSProperties.mpc:

        * orbsvcs/DevGuideExamples/NotifyService/SupplierSideNC/SupplierSideNC.mpc:

          Fixed up errant include of MessengerS.cpp in client sources.

Thu Nov 13 21:48:14 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/IFR_Service/ifr_adding_visitor_exception.cpp:
        * orbsvcs/IFR_Service/ifr_adding_visitor_exception.h:
        * orbsvcs/IFR_Service/ifr_adding_visitor_structure.cpp: